# OpenCLDemo

./: .gitignore  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/optimize/opencldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: opencl_add_kernel.cl  opencl_add_kernel.h
app/src/main/cpp/: opencl_add_kernel.cl  opencl_wrapper.cpp
app/src/main/cpp/include/: opencl_wrapper.h
app/src/main/cpp/include/cl/: cl.h  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_dx9_media_sharing_intel.h  cl_egl.h  cl_ext.h  cl_ext_intel.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  cl_va_api_media_sharing_intel.h  opencl.h
app/src/main/java/com/optimize/opencldemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/optimize/opencldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
